--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
         <section id="despre" class="card">
             <h2>Despre Noi</h2>
-            <p>Cel mai pizdoase mașini din Timișoara, cu cei mai pizdoși proprietari!</p>
+            <p>Cele mai pizdoase mașini din Timișoara, cu cei mai pizdoși proprietari!</p>
         </section>
     </div>
     <footer>
