--- a/porumbel.html
+++ b/porumbel.html
@@ -20,24 +20,21 @@
             padding: 10px 0;
             text-align: center;
         }
+        nav {
+            text-align: center;
+            margin: 10px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+        }
         .container {
             width: 80%;
             margin: 20px auto;
             background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .card {
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .card img {
-            max-width: 100%;
-            max-height: 400px; /* Adjust height as needed */
-            display: block;
-            margin: 10px auto;
         }
         footer {
             background-color: rgba(0, 0, 0, 0.5);
@@ -48,15 +45,28 @@
             width: 100%;
             bottom: 0;
         }
-        .back-button {
-            display: block;
-            width: 100px;
-            margin: 20px auto;
-            padding: 10px;
-            background-color: #333;
-            color: white;
+        .contact {
             text-align: center;
+            margin-top: 20px;
+        }
+        .contact a {
+            margin: 0 10px;
             text-decoration: none;
+            color: #333;
+        }
+        #despre-porumbel {
+            text-align: center;
+            padding-bottom: 20px;
+        }
+        #despre-porumbel p {
+            margin-bottom: 0;
+        }
+        #despre-porumbel img {
+            max-width: 100%;
+            height: auto;
+            max-height: 400px;
+            display: block;
+            margin: 20px auto;
         }
     </style>
 </head>
@@ -64,13 +74,25 @@
     <header>
         <h1>Porumbel - TIMSTARS</h1>
     </header>
+    <nav>
+        <a href="index.html#despre-noi">Despre noi</a>
+        <a href="merch.html">Merch</a>
+        <a href="teddy.html">Teddy</a>
+        <a href="igor.html">Igor</a>
+        <a href="kompot.html">Kompot</a>
+        <a href="porumbel.html">Porumbel</a>
+    </nav>
     <div class="container">
-        <section class="card">
+        <section id="despre-porumbel">
             <h2>Despre Porumbel</h2>
             <p>Scoate sunete de porumbel si distruge turbine lunar</p>
             <img src="porumbel.jpeg" alt="Porumbel">
         </section>
-        <a href="index.html" class="back-button">Înapoi</a>
+        <section class="contact">
+            <h2>Contact</h2>
+            <a href="https://www.instagram.com/grecosu" target="_blank">Instagram</a>
+            <a href="https://www.tiktok.com/@grecosu" target="_blank">TikTok</a>
+        </section>
     </div>
     <footer>
         <p>&copy; 2023-2024 TIMSTARS. Toate drepturile rezervate.</p>
