--- a/igor.html
+++ b/igor.html
@@ -80,13 +80,12 @@
     <div class="container">
         <section class="card">
             <h2>Despre Igor</h2>
-            <p>Proprietarului îi place aspectul stock al mașinii</p>
+            <p>Fost proiect , actuală mașină de șantier</p>
             <img src="igor.jpeg" alt="Igor">
         </section>
         <section class="contact">
             <h2>Contact</h2>
-            <a href="https://www.instagram.com/adriancortusan" target="_blank">Instagram</a>
-            <a href="https://www.tiktok.com/@cxrtusan" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/_raducuuu_" target="_blank">Instagram</a>
         </section>
     </div>
     <footer>
