--- a/teddy.html
+++ b/teddy.html
@@ -80,7 +80,7 @@
     <div class="container">
         <section class="card">
             <h2>Despre Teddy</h2>
-            <p>Proprietar instarit căci are jante de haur</p>
+            <p>Proprietar înstărit cu jante de haur</p>
             <img src="teddy.jpeg" alt="Teddy">
         </section>
         <section class="contact">
